Implemented for Access test cases